# Slavia-backend

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  NORTHFLANK.md  RENDER.md  Secrets.example.toml  Secrets.toml  Slavia-backend.db  build.rs  test.py  test_api.ps1
scripts/: release-check.ps1
src/: api_error.rs  audit.rs  cloudinary.rs  db.rs  external_calendar_sync.rs  import_http_integration_test.rs  lib.rs  main.rs  models.rs  notifications.rs  router.rs  sql_row.rs  state.rs
src/dto/: notifications.rs
src/embed/: backend_root.html
src/middleware/: auth.rs
src/repos/: notifications.rs
src/routes/: admins.rs  announcements.rs  athletes.rs  attendance.rs  auth.rs  chat.rs  comments.rs  competition_participants.rs  competitions.rs  contact.rs  exercises.rs  feature_flags.rs  gallery.rs  import.rs  mod.rs  notifications.rs  payments.rs  posts.rs  recovery.rs  recurring_training_cancellations.rs  results.rs  submissions.rs  system_logs.rs  training_log.rs  training_plans.rs  upload.rs
tests/fixtures/: import_sample.html  import_unicode_dash.html
