[package]
name = "Slavia-backend"
version = "0.1.0"
edition = "2024"

[lib]
name = "slavia_backend"
path = "src/lib.rs"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.9", features = ["macros", "multipart"] }
chrono = { version = "0.4.44", features = ["serde"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
libsql = "0.9.30"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dotenvy = "0.15.7"
toml = "0.8.22"
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
sha1 = "0.10.6"
hex = "0.4.3"
